# servicetask

./: .gitignore  CMakeLists.txt  ServiceCore.cpp  ServiceCore.service  aa.sh  android.boot  build.sh  class.xmi  cleanCache.sh  dele_repshard.sh  es_init.sh  esred.sh  install.sh  javacheck.sh  ln.sh  loopfind.sh  mves.sh  rc.local  readme  readme.POC  readme.error  readme.es  readme.gfs  servicecore.conf  supervisor_core.conf  telec2j.py  unassigned.sh  unassignedset0.sh
Base/: CMakeLists.txt  IInfoBase.cpp  IInfoBase.h  base.h  conf.cpp  conf.h  jsoncpp2pb.cpp  jsoncpp2pb.h  lock.cpp  lock.h  myselfinfo.cpp  myselfinfo.h
Classify/: CMakeLists.txt  dataclassify.cpp  dataclassify.h  main.cpp
Classify/abs/: CMakeLists.txt  absapp.cpp  absapp.h  abscontrol.cpp  abscontrol.h  absresult.cpp  absresult.h  appconf.h
Classify/app/: CMakeLists.txt  app.h
Classify/app/fbm/: CMakeLists.txt  fbm.cpp  fbm.h  fbmcontrol.cpp  fbmcontrol.h
Classify/app/imo/: CMakeLists.txt  imo.cpp  imo.h  imocontrol.cpp  imocontrol.h
Classify/app/imo/control/: CMakeLists.txt
Classify/app/skype/: CMakeLists.txt  skype.cpp  skype.h  skypecontrol.cpp  skypecontrol.h
Classify/app/skype/control/: CMakeLists.txt
Classify/app/telegram/: CMakeLists.txt  telegram.cpp  telegram.h  telegramcontrol.cpp  telegramcontrol.h
Classify/app/telegram/control/: CMakeLists.txt
Classify/app/voxer/: CMakeLists.txt  voxer.cpp  voxer.h  voxercontrol.cpp  voxercontrol.h
Classify/app/voxer/control/: CMakeLists.txt
Classify/cmake/Modules/: Findcomm.cmake
Classify/control/: CMakeLists.txt
DataClassify/: dataclassify.cpp
DataClassify/abs/: CMakeLists.txt  abscontrol.cpp  abscontrol.h  appconf.cpp
DataClassify/app/fbm/: fbmcontrol.cpp  fbmcontrol.h
DataClassify/app/imo/: imocontrol.cpp
DataClassify/app/telegram/: CMakeLists.txt  telegramcontrol.h
DataClassify/app/voxer/: voxer.h  voxercontrol.cpp  voxercontrol.h
Manager/: CMakeLists.txt  absfactory.cpp  absfactory.h  abstask.cpp  abstask.h  chat_message.h  chat_server.cpp  chat_server.h  manager_core.cpp  manager_core.h  manager_es.cpp  manager_es.h  manager_info.cpp  manager_info.h  manager_listen.cpp  manager_listen.h  manager_task.cpp  manager_task.h  myselfinfo.cpp  myselfinfo.h  obmanager.cpp  obmanager.h  taskunit.cpp  taskunit.h
POC/: fbmcontrol  imocontrol  skype  skypecontrol  telegram  telegramcontrol
comm/: Base64Decoder.h  Base64Encoder.cpp  Base64Encoder.h  CMakeLists.txt  bin2ascii.cpp  cdecode.cpp  comm.cpp  comm.h  ctimer.cpp  ctimer.hpp  getconfig.cpp  getconfig.h  md5.cpp  md5.h  reflex.cpp  reflex.h  urlcode.cpp  urlcode.h
comm/libb64/: CMakeLists.txt
dbput/: CMakeLists.txt  esmanage.cpp  esmanage.h  esmanager.cpp  esmanager.h  main.cpp
elasticlient/: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Readme.md
elasticlient/cmake/Modules/: FindCPR.cmake  FindHTTPMockServer.cmake  FindJsonCpp.cmake
elasticlient/include/elasticlient/: bulk.h  client.h  logging.h  scroll.h
elasticlient/src/: CMakeLists.txt  bulk-impl.h  bulk.cc  client-impl.h  client.cc  logging-impl.h  logging.cc  scroll-impl.h  scroll.cc
expclassify/: CMakeLists.txt  dbput.cpp  dbput.h  expclassify.cpp  expclassify.h  main.cpp
json2pb/: CMakeLists.txt
protofile/: conf.proto  devinfo.proto  esinfo.proto  taskinfo.proto
sh/: index.sh
supervisor/conf.d/: core.conf  django.conf  es.conf  service_core.conf
